--- a/cesium/Apps/home.htm
+++ b/cesium/Apps/home.htm
@@ -24,7 +24,7 @@
             position: absolute;
         },
         #uiContainer {
-            top: 100;
+            top: 50px;
         },        
     </style>
 </head>
