--- a/cesium/Apps/home.htm
+++ b/cesium/Apps/home.htm
@@ -22,16 +22,13 @@
             padding: 0;
             overflow: hidden;
             position: absolute;
-        },
-        #uiContainer {
-            top: 50px;
-        },        
+        },   
     </style>
 </head>
 
 <body>
     <div id="cesiumContainer"></div>
-    <div id="uiContainer">
+    <div id="uiContainer" style="top:50px;">
         <div id="ui">
         </div>
     </div>
